# uni_report_guard_mcp_public

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
docs/: DEVELOPMENT_CONDITIONS.md  INTER_MODULE_INTERFACES.md  PROJECT_SILHOUETTE.md  SYSTEM_ARCHITECTURE.md
src/report_guard/: __init__.py  app_server.py  config.py  errors.py  guidance_provider.py  i18n.py  logging.py  mcp_transport.py  observability.py  pipeline_orchestrator.py  rate_limit.py  references.py  result_formatter.py  retry.py  schemas.py  security.py  tool_registry.py
src/report_guard/citation/: parser.py
src/report_guard/clients/: crossref.py  kci.py  naver_search.py  semantic_scholar.py
src/report_guard/guidance/: CITATION_CHECK.md  CITATION_FORMAT.md  GOOD_WRITING.md  PLAGIARISM_CHECK.md  TO_HAVE.md
src/report_guard/pipelines/: _guidance_common.py  _stub_common.py  citation.py  citation_format.py  counts.py  full_check.py  plagiarism.py  required_fields.py  spellcheck.py  writing_structure.py
src/report_guard/providers/spellcheck/: __init__.py  base.py  composite_provider.py  english_provider.py  hanspell_provider.py  mock_provider.py
src/report_guard/similarity/: scorer.py
src/report_guard/text/: chunker.py  segmentation.py
tests/: test_citation.py  test_config.py  test_counts.py  test_full_check.py  test_guidance.py  test_i18n_responses.py  test_logging_privacy.py  test_module_boundaries.py  test_plagiarism.py  test_security.py  test_spellcheck.py  test_spellcheck_english.py  test_tool_registry.py  test_transport_and_formatter.py
